--- a/pom.xml
+++ b/pom.xml
@@ -46,26 +46,37 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>  
 		</dependency> 
 
+		<!-- thymeleaf -->
 		<dependency>  
 			<groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>  
 		</dependency> 
 
+		<!-- Kết nối mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
 
+		<!-- validate -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!-- Thay đổi khi lưu -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Thymeleaf Layout  -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 
