--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!-- Mã hóa MK -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.8.0</version> <!-- Sử dụng phiên bản mới nhất nếu cần -->
+		</dependency>
 
 	</dependencies>
 
